=Added barchart for Revenue-Cost-Widget, fixed delete button to align correctly with new widgets, changed Widget CSS to match prototype

--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -3,8 +3,8 @@
   margin-top: 16px;
 }
 
-
 .square {
+  border-radius: 0.5vw 0.5vw 0.5vw 0.5vw;
   background: rgb(230,230,230);
   width: 50vw;
   min-width: 300px!important;
