--- a/src/app/widget/widget.component.scss
+++ b/src/app/widget/widget.component.scss
@@ -1,11 +1,4 @@
 .widget {
-  border: 1.5px solid black;
-  border-radius: 8px;
-  height: 430px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10px 10px 10px 10px;
   text-align: center;
 }
 
@@ -16,8 +9,3 @@ p {
 span {
   text-align: right;
 }
-
-.close {
-
-}
-
